syntax = "proto3";

message Empty {}

message Display {
  // A string of four characters.
  string digits = 1;
  // Whether the colon is displayed.
  bool colon = 2;
}

message ClockOptions {
  bool is24Hour = 1;
}

message TimerOptions {
  uint32 seconds = 1;
}

service Controller {
  rpc EnableClock(ClockOptions) returns (Empty) {}
  rpc StartTimer(TimerOptions) returns (Empty) {}
  rpc SubscribeToDisplay(Empty) returns (stream Display) {}
}
